--- a/notebook-core/pom.xml
+++ b/notebook-core/pom.xml
@@ -22,5 +22,9 @@
             <artifactId>h2</artifactId>
             <version>1.4.197</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
