--- a/notebook-app/pom.xml
+++ b/notebook-app/pom.xml
@@ -46,6 +46,11 @@
             <groupId>com.vlad.learn</groupId>
             <artifactId>notebook-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+        </dependency>
     </dependencies>
 
     <build>
