--- a/notebook-app/pom.xml
+++ b/notebook-app/pom.xml
@@ -25,11 +25,11 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>2.0.5</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
             <artifactId>nekohtml</artifactId>
             <version>1.9.21</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
@@ -47,9 +47,15 @@
             <artifactId>notebook-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.197</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
