--- a/notebook-app/src/main/resources/application.properties
+++ b/notebook-app/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -8,7 +7,6 @@ hibernate.hbm2ddl.import_files=import.sql
 #spring.h2.console.path=/h2
 #spring.h2.console.enabled=true
 #datasource
-spring.datasource.url=jdbc:h2:mem:notebook;
-spring.datasource.username=h2
-spring.datasource.password=h2
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/notebook_db
+spring.datasource.username=dbAdmin
+spring.datasource.password=1111
