--- a/notebook-app/src/test/resources/application.properties
+++ b/notebook-app/src/test/resources/application.properties
@@ -1,14 +1,13 @@
-spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
-hibernate.hbm2ddl.import_files=import.sql
 
 #console
 #spring.h2.console.path=/h2
 #spring.h2.console.enabled=true
 #datasource
-spring.datasource.url=jdbc:h2:mem:notebook;
-spring.datasource.username=h2
-spring.datasource.password=h2
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/notebook_db_test
+spring.datasource.username=dbAdmin
+spring.datasource.password=1111
+
+hibernate.dialect.storage_engine=innodb
