--- a/notebook-app/src/main/resources/application.properties
+++ b/notebook-app/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.thymeleaf.cache=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
-hibernate.hbm2ddl.import_files=import.sql
 
 #console
 #spring.h2.console.path=/h2
@@ -10,3 +9,5 @@ hibernate.hbm2ddl.import_files=import.sql
 spring.datasource.url=jdbc:mysql://localhost:3306/notebook_db
 spring.datasource.username=dbAdmin
 spring.datasource.password=1111
+
+hibernate.dialect.storage_engine=innodb
